# ft_linear_regression

./: LICENSE  README.md  pyproject.toml
src/data/: parameters.json
src/ft_linear_regression/precision/: precision.py
src/ft_linear_regression/predict/: config.py  evaluate.py  plot.py  predict.py  watchdog_handler.py
src/ft_linear_regression/train/: model.py  model_trainer.py  train.py  views.py
src/ft_linear_regression/utils/: data_utils.py
src/ft_linear_regression/utils/data/: parameters.json
